<resources>
    <string name="app_name">MicroChat</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome to Aitam\'s MicroChat!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="verify_password">Verify Password</string>
    <string name="send">Send</string>
    <string name="logout">Logout</string>
    <string name="photo">Photo</string>
    <string name="close">Close</string>
</resources>
